<resources>
    <string name="app_name">Azal</string>
    <string name="contacts1" translatable="false">For general information</string>
    <string name="contacts2">Call</string>
    <string name="contacts3">Fax: + 994 (12) 437–40–87</string>
    <string name="contacts4">Questions about Azal Miles</string>
    <string name="contacts5">Assistance with Disabilities</string>
    <string name="contacts6">From US:</string>
    <string name="contacts7">For complaints and suggestions</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Azerbaijan Airlines</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="phone_number">+994125988880</string>
    <string name="info1">Information for passengers</string>
    <string name="info2">Coorporate information</string>
    <string name="info3">Airport and Other Departments</string>
    <string name="info">Information</string>
    <string name="description_phone">Phone call image</string>
    <string name="description_email">email image</string>
    <string name="general_information_header">General Information</string>
    <string name="baggage_header">Baggage</string>
    <string name="delayed_baggage_tracking_header">Delayed Baggage Tracking</string>
    <string name="electronic_tickets_header">Electronic Tickets</string>
    <string name="flight_timetables_header">Flight Timetables</string>
    <string name="online_ticket_purchase_header">Online Ticket Purchase</string>
    <string name="general_conditions_header">General Conditions</string>
    <string name="overbooking_header">Overbooking</string>
    <string name="entry_customs_amp_currency_head"><![CDATA[Entry, Customs & Currency]]></string>
    <string name="branded_fares_rules_header">Branded fares rules</string>
    <string name="unwanted_passengers_header">Unwanted Passengers</string>
    <string name="flight_tracker_header">Flight Tracker</string>
    <string name="from_passengers_travelling_to_from_usa_header">From Passengers Travelling to/from USA</string>
    <string name="from_passengers_travelling_to_from_eu_header">From Passengers Travelling to/from EU</string>
    <string name="from_passengers_travelling_to_from_people_s_republic_of_china_header">From Passengers Travelling to/from People\'s Republic of China</string>
    <string name="security_header">Security</string>
    <string name="azal_oil_header">AZAL Oil</string>
    <string name="air_traffic_control_header">Air Traffic Control</string>
    <string name="international_carriage_contract_header">International Carriage Contract</string>
    <string name="special_cases_of_transportation_header">Special Cases of Transportation</string>
    <string name="transportation_of_a_group_header">Transportation of a Group</string>
    <string name="sales_offices_header">Sales Offices</string>
    <string name="information_for_agents_header">Information for Agents</string>
    <string name="group_tr_string"><b>1.Terms and definitions\n\"Airline (Carrier)\" or \"Airline (Carrier) flights\"</b>- “Azerbaijan Airlines” Closed Joint Stock Company or all flights of “Azerbaijan Airlines” CJSC, which are carried out under Code J2. Discounts for the flights operated by “Buta Airways” can be applied only by special permission of the airline management.\n<b>\"CRS\"</b> - Computer Reservations System of the \"Azerbaijan Airlines\" airline \n<b>\"Group\"</b> - a group of persons, which consists of passengers above two years old, no less than ten people in the Economy Class, and no less than six people in Business Class and Comfort Club, and no less than 5 people in VIP Club booked for the same flights of the Azerbaijan Airlines, for the same date through the entire flight route. - a group of persons, which consists of at least 10 passengers with combined carriage (VIP Club+ Comfort Club / VIP Club + Business Class, VIP Club + Economy / Business Class + Comfort Club / /Business Class + Economy Class ) shall also be regarded as a group. \n<b>\"Group carriage\"</b> - carriage of a group of passengers booked for the same flights of the Azerbaijan Airlines airline, for the same date through the entire turnaround flight route. One-way carriage of passengers will not be regarded as group carriage. \n<b>\"Group fare\"</b> - cost of carriage of one airline passenger within a particular group, without taking into account any taxes and charges. \n<b>\"Customer\"</b> - a person or entity applying to the airline for carriage of a group under special group conditions. \n<b>\"Authorised agent\"</b> - organisation authorised by virtue of a special document to carry out additional actions related to passenger services on behalf of the Carrier, including but not limited to actions related to refund of money, issuance of duplicates and implementation of other service functions. \n<b>2. Conditions and rules of group reservations.</b> The following rules shall be valid for all group reservations for the flights of Azerbaijan Airlines, and the airline reserves the right to amend this document at any time without any previous notice. \n<b>2.1.</b>To enable considering the possibility of reservation and calculation of the cost of group carriage, the Customer shall send a standard written application form (the application form is available in Attachment A to these rules) through the airline\'s official website www.azal.az (www.swtravel.az) or to the email address at group@azal.az (group@swtravel.az) which shall contain minimum information about the group, including but not limited to: Route; Exact dates of flights; Number of passengers (adults, children under 12 years of age, children under 2 years of age); Class of service; Group character (passenger category). In addition to the foregoing items, all members of the group shall be directly related to the customer organization. The carrier shall consider the possibility of carriage of the group and calculate the cost (amount of a discount) within three business days, upon confirmation of receipt of the Customer\'s application by the airline. \n<b>2.2.</b> Sales department of “Silk Way Travel” will process the request. The contract for the group carriage will be concluded between the Customer and the representative of “Silk Way Travel” / Air Company. \n<b>2.3.</b> To confirm the group reservation, the Customer shall pay 20 (twenty) percent of the total cost of group carriage as a non-refundable deposit within two banking days, upon confirmation of the possibility of the carriage and provision of the estimated cost of carriage by the airline. Payment can be made through both EMD extract and by transfer to the Carrier\'s bank account. In high loading periods, the nonrefundable deposit will be 50%. \n<b>2.4.</b> Reservation of the group carriage shall be completed no later than 14 (fourteen) days before the expected date of the first flight. \n<b>2.5.</b> In case when the written application for the group carriage is received within a period less than 14 (fourteen) calendar days before the flight, the Customer shall pay the total cost of carriage within two banking days, but no later than seven calendar days before the flight date. \n<b>2.6.</b> The carriage, for which the application was received by the airline within a period less than 7 (seven) calendar day before the expected first flight date upon confirmation of receipt of the Customer\'s application by the airline, will be considered individually. In such a case, the airline reserves the right to apply individual conditions of group carriage, which are not provided for in these rules. \n<b>2.7.</b> The airline shall allow free substitution of surnames (group members) of passengers within the group, to the extent that the number the substituted surnames is not in excess of 20% of the total number of passenger in the group. Request for any change shall be exclusively in writing, and submitted directly by the Customer. Rounding shall be made to the biggest whole number. Each additional request for substitution of a passenger\'s (group member\'s) surname shall be realized with additional penalty payment in the amount of 50 (fifty) Euros. \n<b>2.8.</b> The Customer shall provide or confirm to the carrier the final composition of the group no later than within three business days before the expected date of flight, including complete passport details of all passengers within the group. \n<b>2.9.</b> In the case of reduction the number of the group members (the number of travelling passengers in the group) and informing the airline about it 14 days before the flight departure, a reduction of total number of group members up to 20% is permitted without penalty. A change is prohibited less than 14 days before departure - penalty in the amount of the deposit is levied. \n<b>2.10.</b> The airline reserves the right to unilaterally revise the possibility and conditions of the group carriage if the group size is changed by the Customer. \n<b>2.11.</b> In case of cancellation of the reserved group carriage within a period not less than 14 (fourteen) calendar days before the expected date of flight, the airline shall deduct a penalty in the amount of the deposit paid at the time of reservation. \n<b>2.12.</b> In case of cancellation of the reserved group carriage within a period not less than 14 (fourteen) calendar days, but more than 7 (seven) days before the expected date of flight, the airline shall deduct a penalty in the amount of 50% of total cost of carriage. \n<b>2.13.</b> In case of cancellation of the reserved group carriage within a period less than 7 days before the expected date of flight, but more than 72 hours before the flight, the airline shall deduct a penalty in the amount of 75% of total cost of carriage. \n<b>2.14.</b> In case of cancellation of the reserved group carriage within a period less than 72 hours before the expected date of flight, the paid amount shall not be refunded, except for the airport and other taxes and levies. \n<b>2.15.</b> In case of cancellation of the reserved group carriage after the commencement of carriage (partial carriage), the paid amount shall not be refunded, except for the airport and other taxes and levies. \n<b>2.16.</b> Refunding of individual air tickets within a confirmed group air carriage shall be prohibited, including the airport and other taxes and levies. In any case, the airline unilaterally reserves the right to provide or refuse in group transportation.</string>
</resources>