<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/info2"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button12"
        android:layout_width="152dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/international_carriage_contract_header"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <Button
        android:id="@+id/button13"
        android:layout_width="151dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/special_cases_of_transportation_header"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button12" />

    <Button
        android:id="@+id/button14"
        android:layout_width="149dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/transportation_of_a_group_header"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button13" />

    <Button
        android:id="@+id/button15"
        android:layout_width="151dp"
        android:layout_height="47dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/sales_offices_header"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button14" />

    <Button
        android:id="@+id/button16"
        android:layout_width="149dp"
        android:layout_height="41dp"
        android:layout_marginTop="16dp"
        android:background="@color/colorPrimary"
        android:text="@string/information_for_agents_header"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button15" />
</android.support.constraint.ConstraintLayout>