<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:stretchColumns="1">

        <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".InformationForPassengers">


            <TextView
                android:id="@+id/textView10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="32dp"
                android:text="@string/info1"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/button17"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/general_information_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView10" />

            <Button
                android:id="@+id/button18"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/baggage_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button17" />

            <Button
                android:id="@+id/button19"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/delayed_baggage_tracking_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button18" />

            <Button
                android:id="@+id/button20"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/electronic_tickets_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button19" />

            <Button
                android:id="@+id/button21"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/flight_timetables_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button20" />

            <Button
                android:id="@+id/button22"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/online_ticket_purchase_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button21" />

            <Button
                android:id="@+id/button23"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/general_conditions_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button22" />

            <Button
                android:id="@+id/button24"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/overbooking_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button23" />

            <Button
                android:id="@+id/button25"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/entry_customs_amp_currency_head"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button24" />

            <Button
                android:id="@+id/button26"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/branded_fares_rules_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button25" />

            <Button
                android:id="@+id/button27"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@color/colorPrimary"
                android:text="@string/unwanted_passengers_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button26" />

            <Button
                android:id="@+id/button29"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/flight_tracker_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button27" />

            <Button
                android:id="@+id/button30"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/from_passengers_travelling_to_from_usa_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button29" />

            <Button
                android:id="@+id/button31"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/from_passengers_travelling_to_from_eu_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button30" />

            <Button
                android:id="@+id/button32"
                android:layout_width="190dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:text="@string/from_passengers_travelling_to_from_people_s_republic_of_china_header"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="@color/colorAccent"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button31" />



        </android.support.constraint.ConstraintLayout>


</TableLayout>
    </ScrollView>